<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="upcomning_elections">Upcomning Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="address">Address</string>
    <string name="election_information">Election Information</string>
    <string name="no_data_available_for_this_election">No data available for this election.</string>
    <string name="error_loading_voter_info">Error loading voter info</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="follow_election">Follow Election</string>
    <string name="following_election_failed">Following election failed</string>
    <string name="error_loading_representatives">Error loading representatives</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_cant_be_empty">Address can\'t be empty</string>
    <string name="use_my_location">Use My Location</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="representative_search">Representative Search</string>
    <string name="ballot_box_image">Ballot box image</string>
    <string name="www_icon">WWW icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="officials_photo">Official\'s photo</string>
    <string name="location_required_error">Location services must be enabled to use your location.</string>

</resources>
