<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/representative_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints=""
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints=""
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@={viewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.refreshRepresentatives()}"
                android:text="@string/find_my_representatives"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.useMyLocation()}"
                android:text="@string/use_my_location"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form">

            <ProgressBar
                android:id="@+id/representatives_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/representatives_recycler"
                app:layout_constraintEnd_toEndOf="@+id/representatives_recycler"
                app:layout_constraintStart_toStartOf="@+id/representatives_recycler"
                app:layout_constraintTop_toTopOf="@+id/representatives_recycler"
                app:loadingStatus="@{viewModel.loadingStatus}" />

            <TextView
                android:id="@+id/representative_title"
                style="@style/title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/my_representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representatives_recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                app:representativesListData="@{viewModel.representatives}" />

            <TextView
                android:id="@+id/list_placeholder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                motion:visibilityMode="ignore" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>