<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/www_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/facebook_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:contentDescription="@string/officials_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            tools:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/office_name_text"
            style="@style/subtitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President of the United States" />

        <TextView
            android:id="@+id/official_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{representative.official.name}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toBottomOf="@+id/office_name_text"
            tools:text="Donald J. Trump" />

        <TextView
            android:id="@+id/official_party_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toBottomOf="@+id/official_name_text"
            tools:text="Republican Party" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/twitter_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>